[gd_scene load_steps=7 format=3 uid="uid://f3i244v824u6"]

[ext_resource type="Script" path="res://scripts/wash_plate.gd" id="1_b8t5i"]
[ext_resource type="PackedScene" uid="uid://cvwcrt17a7qmp" path="res://scene/plate/buble.tscn" id="2_le6ia"]
[ext_resource type="Texture2D" uid="uid://boa822pn1fgys" path="res://assets/Inventory/Inventory_background.png" id="2_yimua"]
[ext_resource type="Texture2D" uid="uid://fuqdr5ynbiwm" path="res://assets/others/mouse_cook.png" id="5_yptu7"]
[ext_resource type="Texture2D" uid="uid://bil51hkmhi5n3" path="res://assets/others/mouse_shop.png" id="6_wdpjj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kh3rc"]
size = Vector2(144, 134.25)

[node name="wash_plate" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b8t5i")
bubble_sprite = ExtResource("2_le6ia")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -128.5
offset_right = 203.0
offset_bottom = 128.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yimua")
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 19.0
offset_top = 14.0
offset_right = 99.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0.760784, 0.533333, 0.368627, 1)
theme_override_font_sizes/font_size = 8
text = "clean:
dirty:"
uppercase = true

[node name="FoamTextureRect" type="TextureRect" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -63.5
offset_right = 72.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="NinePatchRect/FoamTextureRect"]
position = Vector2(72, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NinePatchRect/FoamTextureRect/Area2D"]
position = Vector2(0, 61.375)
shape = SubResource("RectangleShape2D_kh3rc")

[node name="detergent_button" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 299.0
offset_top = 45.5
offset_right = 363.0
offset_bottom = 109.5
texture_normal = ExtResource("5_yptu7")

[node name="water_button" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 299.0
offset_top = 149.5
offset_right = 363.0
offset_bottom = 213.5
texture_normal = ExtResource("6_wdpjj")

[connection signal="mouse_entered" from="NinePatchRect/FoamTextureRect/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="NinePatchRect/FoamTextureRect/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="button_down" from="NinePatchRect/detergent_button" to="." method="_on_detergent_button_button_down"]
[connection signal="button_down" from="NinePatchRect/water_button" to="." method="_on_water_button_button_down"]
